# hack_augment

./: .gitignore  LICENSE  PROJECT_OVERVIEW.md  README.md  ResetAugment.py  augment-reset.js  augment_reset.go  augment_reset.nim  go.mod  package.json  公众号推文.md
augment-reset-rust/: CHANGELOG.md  Cargo-minimal.toml  Cargo.toml  FEATURE_COMPARISON.md  Makefile  README.md  build-minimal.bat  build.bat  build.sh  compress.bat  demo_interactive.bat  test_banner.bat  test_compatibility.rs  test_interactive.bat  verify_banner_alignment.bat  verify_features.bat  verify_project.py
augment-reset-rust/.github/workflows/: cross-platform-build.yml
augment-reset-rust/docs/: CROSS_COMPILATION.md  CURSOR_TELEMETRY_RESET.md
augment-reset-rust/scripts/: cross-compile.bat  cross-compile.sh  cursor-telemetry-reset.ps1  cursor-telemetry-reset.rs  cursor-telemetry-reset.sh
augment-reset-rust/src/: lib.rs  main.rs
augment-reset-rust/src/cli/: args.rs  interactive.rs  mod.rs
augment-reset-rust/src/config/: mod.rs
augment-reset-rust/src/core/: error.rs  mod.rs  types.rs
augment-reset-rust/src/database/: manager.rs  mod.rs
augment-reset-rust/src/filesystem/: mod.rs  operations.rs  paths.rs
augment-reset-rust/src/idgen/: mod.rs
augment-reset-rust/src/jetbrains/: mod.rs
augment-reset-rust/src/utils/: banner.rs  mod.rs
augment-reset-rust/tests/: integration_tests.rs
augment_reset_project/: .gitignore  CHANGELOG.md  PROJECT_SUMMARY.md  README.md  augment_reset.nimble  build_static.bat  demo.bat  example.nim  run.bat  run.sh  show_banner.bat  static_test.db  test_all_features.bat  test_augment.db  test_database_cleanup.bat
augment_reset_project/docs/: augment_reset.html  augment_reset.idx  theindex.html
augment_reset_project/docs/augment_reset/: banner.html  banner.idx  cli.html  cli.idx  config.html  config.idx  database.html  database.idx  idgen.html  idgen.idx  jetbrains.html  jetbrains.idx  paths.html  paths.idx  reset.html  reset.idx  system.html  (+5 more)
augment_reset_project/scripts/: build.sh  test.sh
augment_reset_project/src/: augment_reset.nim
augment_reset_project/tests/: test_all.nim
principles/: README.md  augment_reset_legacy.nim
(+11 files in other folders)
